<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signup.mechanic.ActivityMechanicSignUp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/toolbar_curve_shape"
        android:gravity="center"
        android:id="@+id/txt_toolbar"
        android:padding="@dimen/_10sdp"
        android:text="@string/mechon"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_name"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_garriage_name" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_person_name"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_person_name" />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_contact"
                android:textSize="@dimen/_14sdp"
                android:clickable="false"
                android:enabled="false"
                android:maxLength="10"
                android:inputType="number"
                android:textColor="@color/black"
                android:id="@+id/edittxt_contatc_no" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:weightSum="1"
                android:background="@drawable/edit_text_border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/select_your_problem"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/choose_garage_type"
                    android:drawableRight="@drawable/ic_arrow_forward_24"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/choose"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:divider="@null"
                android:visibility="gone"
                android:id="@+id/rv_selected_garage_type"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/email_id"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_emailId" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_password" />



            <EditText
                android:id="@+id/edittxt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_address"
                android:focusable="false"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_no_of_mechanic"
                android:textSize="@dimen/_14sdp"
                android:inputType="number"
                android:textColor="@color/black"
                android:id="@+id/edittxt_no_of_mechanic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_mechanic_name"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_mechanic_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/garriage_mechanic_number"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:id="@+id/edittxt_mechanic_number" />


            <EditText
                android:id="@+id/edittxt_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/bank_name"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edittxt_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/account_no"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edittxt_ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/ifsc_code"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <EditText
                android:id="@+id/edittxt_paymentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/upi_payment_id"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <EditText
                android:id="@+id/edittxt_paymentNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/upi_payment_no"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:elevation="15dp"
                app:cardCornerRadius="15dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:layout_gravity="center"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/btn_mechanic_sign_up"
                android:thicknessRatio="1.9"
                android:layout_centerHorizontal="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_create_event_icon"
                    />

            </androidx.cardview.widget.CardView>

           <!-- <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mechanic_sign_up"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
-->


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>