<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signup.user.ActivityUserSignUpScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/toolbar_curve_shape"
        android:gravity="center"
        android:id="@+id/txt_toolbar"
        android:padding="@dimen/_10sdp"
        android:text="@string/mechon"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/firstName"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_firstName" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/middleName"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_midName" />

<!--        android:drawableLeft="@drawable/ic_profile"-->
        <!--        android:drawablePadding="@dimen/_10sdp"-->


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/lastName"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_lastName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email_id"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_emailId" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_password" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/mobile_number"
            android:enabled="false"
            android:clickable="false"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_mobileNumber"
            android:maxLength="10"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/dob"
            android:enabled="false"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/edittxt_dob" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:id="@+id/iv_date_picker"
                android:paddingRight="@dimen/_15sdp"
                android:src="@drawable/ic_date"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:elevation="15dp"
            app:cardCornerRadius="15dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/btn_user_sign_up"
            android:thicknessRatio="1.9"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_create_event_icon"
                />

        </androidx.cardview.widget.CardView>


        <!--<Button
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:id="@+id/btn_user_sign_up"
            android:layout_gravity="center"
            android:textColor="@color/white"/>-->

    </LinearLayout>
    </ScrollView>


    <!--<ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"/>
-->
</RelativeLayout>