<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signup.mechanic.garageType.ActivitySelectGarageTypes">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/toolbar_curve_shape"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/mechon"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:id="@+id/curve_toolbar"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_garage_type"
        android:id="@+id/txt_select_your_problem"
        android:layout_below="@+id/curve_toolbar"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_20sdp"/>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/txt_select_your_problem"
        android:id="@+id/select_garage_type_recycle_view" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/btn_select_garage_type"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>