<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.issues.vehicleIssues.ActivitySelectYourProblemCheckBox">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/toolbar_curve_shape"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/mechon"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:id="@+id/curve_toolbar"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curve_toolbar"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_problem1"
        android:id="@+id/txt_select_your_problem"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_20sdp"/>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/txt_select_your_problem"
        android:id="@+id/select_problem_recycle_view" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/edit_text_border"
        android:layout_below="@+id/select_problem_recycle_view"
        android:hint="@string/enter_your_problem"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        android:id="@+id/edittxt_your_problem" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/btn_select"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            />


    </LinearLayout>


    </androidx.core.widget.NestedScrollView>






</RelativeLayout>